1.2/manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 2345
      targetPort: 3000
  type: ClusterIP
