1.2/manifest/backend-todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-todos
spec:
  selector:
    app: backend-todos
  ports:
    - port: 2345
      targetPort: 3001
  type: ClusterIP
