1.2/manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project
spec:
  selector:
    app: frontend
  ports:
    - port: 2345
      targetPort: 3000
  type: ClusterIP
