1.2/manifest/postgres-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresApp
  template:
    metadata:
      labels:
        app: postgresApp
    spec:
      containers:
        - name: postgres-db
          image: postgres:13-trixie
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgresApp
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: postgresApp
